@@ -1,5 +1,5 @@
-Last generated 2011-08-22
-Coverage: 712/930 (76.56%), w. legacy tests: 835/930 (89.78%)
+Last generated 2011-08-31
+Coverage: 715/933 (76.63%), w. legacy tests: 838/933 (89.82%)
 
 The following tags are not tested by the test suite:
 
