@@ -9,7 +9,8 @@ Package: {$srcpkg}
 Architecture: {$architecture}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, xorg, bash,
  conflict-dep, gawk | awk, new-package | xbase-clients, {$srcpkg},
- gaim, emacs21, emacs22, makedev, libfile-temp-perl (>= 0.18)
+ gaim, emacs21, emacs22, makedev, libfile-temp-perl (>= 0.18),
+ packaging-dev
 Breaks: package-without-version, {$srcpkg} (<< 0.1),
  replaced-wo-version
 Replaces: replaced-wo-version
