@@ -12,6 +12,7 @@ Test-For:
  depends-on-metapackage
  depends-on-obsolete-package
  depends-on-old-emacs
+ depends-on-packaging-dev
  depends-on-python-minimal
  lib-recommends-documentation
  needlessly-depends-on-awk
