@@ -12,6 +12,7 @@ W: fields-depends-general: breaks-without-version package-without-version
 W: fields-depends-general: depends-exclusively-on-makedev depends
 W: fields-depends-general: depends-on-old-emacs depends: emacs21
 W: fields-depends-general: depends-on-old-emacs depends: emacs22
+W: fields-depends-general: depends-on-packaging-dev depends
 W: fields-depends-general: package-relation-with-self breaks: fields-depends-general (<< 0.1)
 W: fields-depends-general: versioned-dependency-satisfied-by-perl depends: libfile-temp-perl (>= 0.18)
 W: libfields-depends-general: lib-recommends-documentation recommends: debconf-doc
